// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule unrecognized-char-ref should contain documentation 1`] = `
Object {
  "description": "HTML defines a set of valid character references but this is not a valid one.",
  "url": "https://html-validate.org/rules/unrecognized-char-ref.html",
}
`;

exports[`rule unrecognized-char-ref should contain documentation 2`] = `
Object {
  "description": "HTML defines a set of valid character references but &spam; is not a valid one.",
  "url": "https://html-validate.org/rules/unrecognized-char-ref.html",
}
`;
